fix placeholder contrast

--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -25,26 +25,6 @@ textarea {
 }
 
 
-// Placeholders
-::-webkit-input-placeholder { /* WebKit browsers */
-  color: #000;
-  font-family: 'Open Sans', helvetica, arial, sans-serif;
-}
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color:    #000;
-   opacity:  1;
-   font-family: 'Open Sans', helvetica, arial, sans-serif;
-}
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color:    #000;
-   opacity:  1;
-   font-family: 'Open Sans', helvetica, arial, sans-serif;
-}
-:-ms-input-placeholder { /* Internet Explorer 10+ */
-   color:    #000;
-   font-family: 'Open Sans', helvetica, arial, sans-serif;
-}
-
 // Media Queries
 @media(max-width: $screen-md-max) {
 
