--- a/scss/main.scss
+++ b/scss/main.scss
@@ -59,3 +59,23 @@
     margin-bottom: 30px;
   }
 }
+
+// Placeholders
+::-webkit-input-placeholder { /* WebKit browsers */
+  color: $gray-darker !important;
+  font-family: $font-family-sans-serif;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color: $gray-darker !important;
+   opacity:  1;
+   font-family: $font-family-sans-serif;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color: $gray-darker !important;
+   opacity:  1;
+   font-family: $font-family-sans-serif;
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+   color: $gray-darker !important;
+   font-family: $font-family-sans-serif;
+}
